--- a/public/submissionform.html
+++ b/public/submissionform.html
@@ -87,5 +87,7 @@
   <video autoplay loop muted poster="screenshot.jpg" id="background">
   <source src="./backgroundvid.mp4" type="video/mp4">
   </video>
+
+  <script src="submission_script.js"></script>
   </body>
 </html>
