--- a/public/after_invalid_submission.html
+++ b/public/after_invalid_submission.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div class="content">
-      <h1> Thanks you very much!</h1>
-      <p>A service request has been sent to nyuad.facilities@nyu.edu. We sincerely hope the issue will get resolved soon.</p>
+      <h1> Oops!</h1>
+      <p>It seems like you submitted an invalid request. Better luck next time!</p>
       <p><button class="submitbutton"><a href="index.html" >HOMEPAGE</a></button></p>
     </div>
   </body>
