--- a/public/submissionform.html
+++ b/public/submissionform.html
@@ -12,44 +12,67 @@
 
   </head>
   <body>
-    <div class="content">
+    <div class="form-content">
       <header class="container-fluid">
-
         <div class="container-fixed">
           <div class="row">
-            <a href="index.html"><button class="backbutton">Back</button></a>
-            <h1 class="col-sm-11" id="logo_text"><span style="font-weight:bold">ac</span>countability</h1>
+            <h1 class="col-sm-11" id="logo_text"><span style="font-weight:bold">ac</span><span style="opacity: 0.5">countability</span></h1>
           </div>
-
       </header>
-
+      <h1 id="help_us">Hello.</h1>
+      <p class="description">
+        By filling out this form, you are contributing to estimated temperature data to make sure people around NYUAD receive updated, more accurate information about their favorite places.
+      </p>
       <form class="submission" action="/submit" method="POST">
-        <h1 id="help_us">Help us inform the rest of the community.</h1>
-        <p style="color: black"> By filling out this form, you are contributing to estimated temperature data to make sure people around NYUAD receive updated, more accurate information about their favorite places.</p>
         <!--<input name="user_location" placeholder="Where are you right now?">-->
-        <input name="user_location_report" list="valid_locations" placeholder="Where are you right now?">
-          <datalist id="valid_locations">
-          </datalist>
-        </input>
-        <br/>
-        <label for="user_temperature" style="font-weight: normal">How does the temperature feel?</label>
-        <select name="user_temperature">
-          <option value="6">Hot</option>
-          <option value="5">Warm</option>
-          <option value="4">Just Right</option>
-          <option value="3">Cool</option>
-          <option value="2">Cold</option>
-          <option value="1">Freezing</option>
-        </select>
-        <br/>
-        <button class="submitbutton">Submit</button>
+        <div class="where">
+          <label for="user_location_report"><p>Where are you right now?</p></label>
+          <br/>
+          <input name="user_location_report" list="valid_locations" placeholder="Enter a location">
+            <datalist id="locations">
+              <option value="Arts Center (general)">
+              <option value="A5 classrooms">
+              <option value="A6 classrooms">
+              <option value="D2 Dining Hall">
+              <option value="D1 Dining Hall">
+              <option value="Baraha">
+              <option value="Campus Center lobby">
+              <option value="Library (general)">
+              <option value="Library Cafe">
+              <option value="A2 classrooms">
+              <option value="A3 classrooms">
+              <option value="A4 classrooms">
+              <option value="A5 Engineering Design Studio">
+              <option value="Marketplace">
+              <option value="Arts Center IM Lab">
+              <option value="Convenience Store">
+              <option value="Welcome Center">
+              <option value="Fitness Center">
+              <option value="Swimming pool">
+            </datalist>
+          </input>
+          <br/>
+        </div>
+        <div class="how">
+          <label for="user_temperature"><p>How does the temperature feel?</p></label>
+          <br/>
+          <select name="user_temperature" class="selector">
+            <option value="6">Hot</option>
+            <option value="5">Warm</option>
+            <option value="4">Just Right</option>
+            <option value="3">Cool</option>
+            <option value="2">Cold</option>
+            <option value="1">Freezing</option>
+          </select>
+          <br/>
+        </div>
+        <div class="submitfield"></div>
       </form>
     </div>
+    <video autoplay loop muted poster="screenshot.jpg" id="background">
+    <source src="./backgroundvid.mp4" type="video/mp4">
+    </video>
   </div>
-  <video autoplay loop muted poster="screenshot.jpg" id="background">
-  <source src="./backgroundvid.mp4" type="video/mp4">
-  </video>
-
   <script src="submission_script.js"></script>
   </body>
 </html>
