--- a/public/index.html
+++ b/public/index.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Forms</title>
-    <link rel = "stylesheet" type = "text/css"  href = "styles.css" />
+    <title>ACcountability</title>
+    <link rel = "stylesheet" type = "text/css"  href = "main.css" />
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://d3js.org/d3.v4.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
   <body>
-    <div class="contents">
-      <header>
-        <h1 id="title"><span style="font-weight:bold">ac</span><span style="font-weight: 100; opacity: 0.8">countability</span></h1>
-        <div>
-            <!-- <form action="/place-query" method="get"> -->
-            <form>
-              <input name="user_location_query" list="locations" placeholder="Enter a place on campus">
-              <datalist id="locations">
-                <option value="Arts Center (general)">
-                <option value="A5 classrooms">
-                <option value="A6 classrooms">
-                <option value="D2 Dining Hall">
-                <option value="D1 Dining Hall">
-                <option value="Baraha">
-                <option value="Campus Center lobby">
-                <option value="Library (general)">
-                <option value="Library Cafe">
-                <option value="A2 classrooms">
-                <option value="A3 classrooms">
-                <option value="A4 classrooms">
-                <option value="A5 Engineering Design Studio">
-                <option value="Marketplace">
-                <option value="Arts Center IM Lab">
-                <option value="Convenience Store">
-                <option value="Welcome Center">
-                <option value="Fitness Center">
-                <option value="Swimming pool">
-              </datalist>
-              </input>
-              <button type="button" id="gobutton" class="gobutton">Go</button>
-            </form>
-            <a href="./submissionform.html" class="msb"><button class="makesubmissionbutton" onclick="">Make a submission</button></a>
+    <div class="form-content">
+      <header class="container-fluid">
+        <div class="container-fixed">
+          <div class="row">
+            <h1 class="col-sm-11" id="logo_text"><span style="font-weight:bold">ac</span><span style="opacity: 0.5">countability</span></h1>
           </div>
       </header>
-      <div class="data_display"></div>
+      <h1 id="help_us">Hello.</h1>
+      <p class="description">
+        By filling out this form, you are contributing to estimated temperature data to make sure people around NYUAD receive updated, more accurate information about their favorite places.
+      </p>
+      <form class="submission" action="/submit" method="POST">
+        <!--<input name="user_location" placeholder="Where are you right now?">-->
+        <div class="where">
+          <label for="user_location_report"><p>Where are you right now?</p></label>
+          <br/>
+          <input class="user_location_report" name="user_location_report" list="locations" placeholder="Enter a location">
+            <datalist id="locations">
+            </datalist>
+          </input>
+          <br/>
+        </div>
+        <div class="how">
+          <label for="user_temperature"><p>How does the temperature feel?</p></label>
+          <br/>
+          <select name="user_temperature" class="selector">
+            <option disabled selected value> Select a temperature</option>
+            <option value="6">Hot</option>
+            <option value="5">Warm</option>
+            <option value="4">Just Right</option>
+            <option value="3">Cool</option>
+            <option value="2">Cold</option>
+            <option value="1">Freezing</option>
+          </select>
+          <br/>
+        </div>
+        <div class="submitfield"></div>
+      </form>
     </div>
-    <script src="script.js"></script>
+    <video autoplay loop muted poster="screenshot.jpg" id="background">
+    <source src="./backgroundvid.mp4" type="video/mp4">
+    </video>
+  </div>
+  <script src="submission_script.js"></script>
   </body>
 </html>
