--- a/public/index.html
+++ b/public/index.html
@@ -14,47 +14,54 @@
   <body>
     <div class="form-content">
       <header class="container-fluid">
-        <div class="container-fixed">
-          <div class="row">
-            <h1 class="col-sm-11" id="logo_text"><span style="font-weight:bold">ac</span><span style="opacity: 0.5">countability</span></h1>
-          </div>
+        <div class="row">
+          <h1 class="col-sm-11" id="logo_text"><span style="font-weight:bold">ac</span><span style="opacity: 0.5">countability</span></h1>
+        </div>
       </header>
-      <div id="heading">
-        <h1 id="help_us">Fetching your location...</h1><span id="infobutton">Why?</span>
+      <div class="sub-body">
+        <div class="vis_options">
+          <button class="choosegraph" id="daily">Daily</button>
+          <button class="choosegraph" id="weekly">Weekly</button>
+        </div>
+        <div class="before-visualization">
+        <div id="heading">
+          <h1 id="help_us">Fetching your location...</h1><span id="infobutton">Why?</span>
+        </div>
+        <p class="description"> </p>
+        <button class="skipbutton">Skip this step</button>
+        <form class="submission" action="/submit" method="POST">
+          <!--<input name="user_location" placeholder="Where are you right now?">-->
+          <div id="where">
+            <label for="user_location_report"><p>Where are you right now?</p></label>
+            <br/>
+            <select class="user_location_report" name="user_location_report">
+            </select>
+            <br/>
+          </div>
+          <div id="how">
+            <label for="user_temperature"><p>How does the temperature feel?</p></label>
+            <br/>
+            <select name="user_temperature" class="selector">
+              <option disabled selected value>Select a temperature</option>
+              <option value="6">Hot</option>
+              <option value="5">Warm</option>
+              <option value="4">Just Right</option>
+              <option value="3">Cool</option>
+              <option value="2">Cold</option>
+              <option value="1">Freezing</option>
+            </select>
+            <br/>
+          </div>
+          <div class="submitfield"></div>
+        </form>
+        </div>
+        <div class="data_display"></div>
       </div>
-      <p class="description"> </p>
-      <button class="skipbutton">Skip this step</button>
-      <form class="submission" action="/submit" method="POST">
-        <!--<input name="user_location" placeholder="Where are you right now?">-->
-        <div id="where">
-          <label for="user_location_report"><p>Where are you right now?</p></label>
-          <br/>
-          <select class="user_location_report" name="user_location_report">
-          </select>
-          <br/>
-        </div>
-        <div id="how">
-          <label for="user_temperature"><p>How does the temperature feel?</p></label>
-          <br/>
-          <select name="user_temperature" class="selector">
-            <option disabled selected value>Select a temperature</option>
-            <option value="6">Hot</option>
-            <option value="5">Warm</option>
-            <option value="4">Just Right</option>
-            <option value="3">Cool</option>
-            <option value="2">Cold</option>
-            <option value="1">Freezing</option>
-          </select>
-          <br/>
-        </div>
-        <div class="submitfield"></div>
-      </form>
     </div>
     <video autoplay loop muted poster="screenshot.jpg" id="background">
-    <source src="./backgroundvid.mp4" type="video/mp4">
+      <source src="./backgroundvid.mp4" type="video/mp4">
     </video>
-  </div>
-  <script src="submission_script.js"></script>
-  <script src="visualization.js"></script>
+    <script src="visualization.js"></script>
+    <script src="submission_script.js"></script>
   </body>
 </html>
