--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,12 @@
             <div class="submitfield"></div>
           </form>
         </div>
+        <div class="card">
         <div class="data_display">
           <div class="data_heading">
           </div>
-          <div class="vis_options">
-          </div>
         </div>
+      </div>
       </div>
     </div>
     <video autoplay loop muted id="background">
