--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
           <form class="submission" action="">
             <!--<input name="user_location" placeholder="Where are you right now?">-->
             <div id="where">
-              <label for="user_location_report"><p class="form-prompt">Select a place on campus</p></label>
+              <label for="user_location_report"><p class="form-prompt">Select your location on campus</p></label>
               <br/>
               <select class="user_location_report" name="user_location_report">
               </select>
