--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src="https://d3js.org/d3.v4.js"></script>
   </head>
   <body>
-    <header class="container-fluid">
+    <header class="container-fluid"><!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In  -->
       <div class="row">
         <div class="project_title">
           <h1 id="logo_text"><a href="index.html"><span style="font-weight:bold">ac</span><span style="opacity: 0.5">countability</span></a></h1>
