--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <div class="sub-body">
         <div class="before-visualization">
           <div id="heading">
-              <!--<img id="loadingfan" src="newfan.gif" width="40px" height="40px"/>-->
+              <img id="loadingfan" src="newfan.gif" width="40px" height="40px"/>
               <h1 id='help_us'>Fetching your location...</h1><div id='buttondiv'><span class='infobutton' id='locationinfo'>?</span></div>
           </div>
           <p class="description"></p>
@@ -64,11 +64,7 @@
           </form>
           <button class="skipbutton">Skip and see current data</button>
         </div>
-        <div class="card" id="displaycard">
-        <div class="data_display">
-          <div class="data_heading">
-          </div>
-        </div>
+        <div class="card" id="displaycard"><div class="data_display"><div class="data_heading"></div></div>
       </div>
       </div>
     </div>
