Slight design changes
... including the fan icon, temporarily replaced by a lovely search icon.

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <div class="sub-body">
         <div class="before-visualization">
           <div id="heading">
-              <img id="loadingfan" src="newfan.gif" width="80px" height="80px"/>
+              <img id="loadingfan" src="animat-search-color.gif" width="150px" height="150px"/>
             </br>
           </div>
           <p class="description">Our form uses your coordinates to give you options that are close to you.</p>
