Mapped more places, added link to request form
The linked request form is a Google Form for people to suggest the addition of a place to our lists.

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
               <label for="user_location_report"><h1>Select your location on campus</h1></label>
               <br/>
               <select class="user_location_report" name="user_location_report">
-              </select>
+              </select><p class="disclaimer" id="dontsee">Don't see your location listed here?</p>
               <br/>
             </div>
             <div id="how">
