About page added
Infographic, submission information added to about page. The whole page is re-formatted

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <div class="sub-body">
         <div class="before-visualization">
           <div id="heading">
-              <img id="loadingfan" src="animat-search-color.gif" width="150px" height="150px"/>
+              <img class="rotimg" id="loadingfan" src="ceiling-fan.png" width=150px style="margin-top: 15px"/>
             </br>
           </div>
           <p class="description">Our form uses your coordinates to give you options that are close to you.</p>
@@ -73,5 +73,6 @@
     </video>
     <script src="visualization.js"></script>
     <script src="submission_script.js"></script>
+    <script src="cards.js"></script>
   </body>
 </html>
